# rabbitmq_api_client

./: .gitignore  LICENCE  README.md  docker-compose-test.yml  pyproject.toml
rabbitmq_api_client/: base.py  client.py  schemas.py
src/rabbitmq_api_client/: base.py  client.py  exceptions.py
tests/: test_client.py
